# bsky-schwartz

./: .env  .gitignore  AGENT.md  AGENTS.md  DISCOVERIES.md  HCI.md  LICENSE  Makefile  README.md  SCHWARTZ.md  config.json  go.mod  go.sum  indigo.go  jetstream.go  main.go
data/: PROMPT_V2.md  SCHWARTZ.md  SCHWARTZ_LITE.md
data-analysis/: README.md  analyze_feed.sh  charts.py  confidence_analysis.py  data.json  download_feed.sh  generate_mock.py  main.py  post_data_gemini.json  post_data_gpt.json  post_data_qwen.json  pyproject.toml  run_confidence.sh
data-analysis/feeds/: conservation.json  download_feed.sh  immigrazione.json  openness_to_change.json  self_enhancement.json  self_transcendence.json  topic_economy.json  topic_immigration.json  topic_politics.json
data-analysis/results/: conservation_results.json
data-analysis/src/data_analysis/: analyzer.py  api_client.py  charts.py  main.py
data-analysis/src/data_analysis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
feed-generator/: Makefile  README.md  TODOs.md  ai_client.go  client.go  feed_20260330212226.json  go.mod  go.sum  main.go  post_DeepSeek-V3.1-Terminus_20260331105913.json  post_DeepSeek-V3_20260331114510.json  post_Qwen3-VL-30B-A3B-Instruct_20260331105950.json  post_Qwen3-VL-30B-A3B-Instruct_20260331115029.json  post_gemini-3.1-flash-lite-preview_20260330212244.json  post_gemini-3.1-flash-lite-preview_20260330232401.json  post_gpt-4.1-mini_20260330212238.json  post_gpt-4.1-mini_20260330232334.json  post_gpt-4.1-mini_20260331113754.json  types.go  valueAnalysis.go  (+3 more)
(+75 files in other folders)
