[project]
name = "data-analysis"
version = "0.1.0"
description = "Benchmark tool for comparing GPT vs Qwen Schwartz value analysis"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "pandas",
    "matplotlib",
]

[project.scripts]
data-analysis = "data_analysis.main:main"

[tool.uv]
package = true
